[package]
name = "tide-condition"
version = "0.1.0"
authors = ["u5surf <u5.horie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "2.5"
md5 = "0.7.0"
tide = { version = "0.16", default-features = false }


[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
